# bewise-test

./: README.md  docker-compose.yaml  entrypoint.sh  env.sample  pyproject.toml
src/: main.py
src/base/: services.py
src/config/: settings.py
src/database/: __init__.py  db.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2023_10_11_2116-4e3232c86caf_create_table_for_question_and_answer.py  2023_10_12_1330-14bc11e6a1ec_create_table_for_question_and_answer.py
src/database/models/: question.py
src/questions/: routers.py  schemas.py  services.py  utils.py
